Implement PUT and DELETE requests
